Miscelanea Android Studio
Trabajo 1º DAW Entornos de Desarrollo I.E.S. Murgi

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,7 +27,7 @@
         android:autofillHints=""
         android:ems="10"
         android:inputType="number"
-        android:text="0"
+        android:text="@string/editTextNumber"
         android:textAlignment="viewEnd"
         app:layout_constraintBottom_toTopOf="@+id/editTextNumber2"
         app:layout_constraintEnd_toEndOf="parent"
@@ -44,7 +44,7 @@
         android:autofillHints=""
         android:ems="10"
         android:inputType="number"
-        android:text="0"
+        android:text="@string/editTextNumber2"
         android:textAlignment="viewEnd"
         app:layout_constraintBottom_toTopOf="@+id/TxtResultado1"
         app:layout_constraintEnd_toEndOf="parent"
@@ -104,6 +104,7 @@
         android:id="@+id/BtnFibonacci"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="opFibonacci"
         android:text="@string/fibonacci"
         app:layout_constraintBottom_toTopOf="@+id/BtnLimpiar"
         app:layout_constraintEnd_toStartOf="@+id/BtnFactorial"
@@ -116,6 +117,7 @@
         android:id="@+id/BtnFactorial"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="opFactorial"
         android:text="@string/factorial"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -141,6 +143,7 @@
         android:id="@+id/BtnLimpiar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="limpiar"
         android:text="@string/limpiar"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
